Last changes before old comp renovation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,13 +109,17 @@ set (NLA3D_APP_SOURCES "src/main.cpp")
 # an executable to use TRUSS3 element
 set (NLA3D_TRUSS_APP_SOURCES "src/main_truss.cpp")
 
+set (NLA3D_TRIANGLE_TERMO_APP_SOURCES "triangle_termo.cpp")
+
 #main executable of the project: nla3d.exe program
 add_executable(nla3d ${NLA3D_APP_SOURCES})
 target_link_libraries(nla3d nla3d_lib)
 
-
 add_executable(nla3d_truss ${NLA3D_TRUSS_APP_SOURCES})
 target_link_libraries(nla3d_truss nla3d_lib)
+
+add_executable(triangle_termo ${NLA3D_TRIANGLE_TERMO_APP_SOURCES})
+target_link_libraries(triangle_termo nla3d_lib)
 
 # Add logic to INSTALL.vcproj to copy app.exe to destination directory
 install (TARGETS nla3d
